applied footer to all pages

--- a/Demo/Demo.html
+++ b/Demo/Demo.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="../img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png" />
   </head>
   <body>
     <header>
@@ -38,13 +38,12 @@
     <main>
       <!--Section for instruction of demo game-->
       <section class="section1">
-        <h1>Demo Halli Galli</h1>
-        <p>
-          Have you mastered the rules of Halli Galli? If yes, let's
-          practice with a fun Demo Game! 🎮​ On this page, you can experience a demo
-          of the Halli Galli game.
-          <span id="text"> Shall we begin ​🚩​ </span>
+        <p class="heading2">
+          Have you mastered the rules of Halli Galli yet? <br />If yes, let's
+          practice with a fun Demo Game! <br />On this page, you can experience
+          a shortened, 1v1 version of the Halli Galli game.
         </p>
+        <h3 class="heading">Let's begin!​</h3>
 
         <h3>Demo Game Instructions</h3>
         <p>
@@ -137,6 +136,10 @@
         </table>
       </section>
     </main>
+    <footer class="footer">
+      <p>Media Computation Group 1.4</p>
+      <p>Haewon, Haruto, Jiayi, Jiyun, Kang San & Seojeong</p>
+    </footer>
     <script src="demo.js"></script>
   </body>
 </html>
