--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 
     <footer class="footer">
       <p>Media Computation Group 1.4</p>
+      <p>Haewon, Haruto, Jiayi, Jiyun, Kang San & Seojeong</p>
     </footer>
     <div id="preloader"></div>
     <script src="index.js"></script>
