--- a/instruction/instruction.html
+++ b/instruction/instruction.html
@@ -169,16 +169,9 @@
         </ol>
       </section>
     </div>
-    <footer>
-      <section id="moreinfo">
-        <p>
-          for more information<a
-            id="clickhere"
-            href="https://world-of-board-games.com.sg/docs/Halli-Galli.pdf"
-            >click here!</a
-          >
-        </p>
-      </section>
+    <footer class="footer">
+      <p>Media Computation Group 1.4</p>
+      <p>Haewon, Haruto, Jiayi, Jiyun, Kang San & Seojeong</p>
     </footer>
   </body>
 </html>
