--- a/quiz/quiz2.0.html
+++ b/quiz/quiz2.0.html
@@ -198,5 +198,9 @@
         <button onclick="quiz()">Check answers</button>
       </div>
     </div>
+    <footer class="footer">
+      <p>Media Computation Group 1.4</p>
+      <p>Haewon, Haruto, Jiayi, Jiyun, Kang San & Seojeong</p>
+    </footer>
   </body>
 </html>
