corrected file path for instruction.html

--- a/instruction/instruction.html
+++ b/instruction/instruction.html
@@ -22,7 +22,7 @@
           <a href="../index.html">Halli Galli: Home</a>
         </li>
 
-        <li><a href="../instruction/halligalli.html">Game Instructions</a></li>
+        <li><a href="../instruction/instruction.html">Game Instructions</a></li>
         <li><a href="../quiz/quiz2.0.html">Quiz Yourself</a></li>
         <li><a href="../demo/demo.html">Demo Game</a></li>
       </ul>
