--- a/instruction/instruction.html
+++ b/instruction/instruction.html
@@ -68,7 +68,7 @@
               alt="an image of a Halli Galli"
             />
           </div>
-          <ul>
+          <ul class="gamecontent__text">
             <li>
               56 playing cards, showing 4 kinds of fruit in groups of 1 to 5
             </li>
@@ -82,20 +82,34 @@
       </div>
 
       <div class="briefintro">
-        <h3>
-          The deck is distributed evenly between the players. All players hold
-          their deck face down and take turns dealing one card face up in front
-          of them. As each player reveals their next card, the instant you see a
-          total of five of one kind of fruit on the table, hit the bell. If
-          you're correct, you pick up all the played cards and put them into
-          your deck; if you're wrong, you pay the other players one card each.
-          When you run out of cards, you're out.
-        </h3>
-        <h1>What if there are only two players left?</h1>
-        <p>
-          When two players are left, they play until the bell is struck once
-          more, then the game ends and the taller deck wins!
-        </p>
+        <div class="briefintroinner">
+          <h1 class="heading briefintro__heading">
+            TOP 5 TIPS TO GET STARTED:
+          </h1>
+          <h3 class="bodytext briefintro__text">
+            1. The deck is evenly distributed between the players.
+          </h3>
+          <h3 class="bodytext briefintro__text">
+            2. All players hold their deck face down and take turns dealing one
+            card face up in front of them.
+          </h3>
+          <h3 class="bodytext briefintro__text">
+            3. As each player reveals their next card, the instant you see a
+            total of five of one kind of fruit on the table, hit the bell. If
+            you're correct, you pick up all the played cards and put them into
+            your deck; if you're wrong, you pay the other players one card each.
+          </h3>
+          <h3 class="bodytext briefintro__text">
+            4. When you run out of cards, you're out.
+          </h3>
+          <h3 class="bodytext briefintro__text">
+            5. When two players are left, they play until the bell is struck
+            once more, then the game ends and the taller deck wins!
+          </h3>
+        </div>
+        <div class="briefintro__img">
+          <img src="../img/halligalligamesetup.png" alt="a photo of Halli Galli game set up.">
+        </div>
       </div>
     </main>
 
