css for instruction

--- a/instruction/instruction.html
+++ b/instruction/instruction.html
@@ -108,67 +108,72 @@
           </h3>
         </div>
         <div class="briefintro__img">
-          <img src="../img/halligalligamesetup.png" alt="a photo of Halli Galli game set up.">
+          <img
+            src="../img/halligalligamesetup.png"
+            alt="a photo of Halli Galli game set up."
+          />
         </div>
       </div>
     </main>
 
     <div class="preparation">
       <div class="preparation__title">
-        <h2 class="heading">Preparation</h2>
+        <h1 class="preparation__heading">Preparation</h1>
       </div>
       <div class="preparation__content">
-        <p class="bodytext">
-          Place the bell in the middle of the table, on a cloth or a piece of
-          felt to protect your table. <br />Select a dealer. He shuffles the
-          cards and deals them out to the players, one at a time until all of
-          the cards have been used up. <br />Each player places their deck face
-          down on the table in front of them, without looking at their cards.
+        <p class="bodytext preparation__text">
+          1. Place the bell in the middle of the table, on a cloth or a piece of
+          felt to protect your table (from the violent bell-smacking). <br />2.
+          Select a dealer who will shuffle the cards and deal them out to
+          players one at a time until there are no cards left. <br />3. Each
+          player places their deck face down on the table in front of them,
+          without looking at their cards.
         </p>
       </div>
     </div>
 
     <div class="gameplay">
       <div class="gameplay__title">
-        <h2 class="heading">The Game</h2>
+        <h1 class="gameplay__heading">Halli Galli: Gameplay Run-down</h1>
       </div>
       <section id="gameplay__content">
-        <ol>
-          <li>The player to the left of the dealer starts the game.</li>
-          <li>
-            Each player turns over the top card of their draw deck and places it
-            face up on the table. These cards are each player's face-up discard
-            pile.
+        <ol class="gameplay__text">
+          <li class="bodytext">
+            The player to the left of the dealer starts the game.
           </li>
-          <li>
+          <li class="bodytext">
+            Each player turns over the card at the top of their deck and places
+            it face up on the table.
+          </li>
+          <li class="bodytext">
             Each card is placed on top of this pile in such a way that it covers
             the previous card and only the top card is visible.
           </li>
-          <li>
+          <li class="bodytext">
             Each player must try to ring the bell first as soon as the revealed
-            cards show exactly 5 fruits of the same type.
+            cards show exactly 5 fruits of the same type. It's a reaction test!
           </li>
-          <li>
+          <li class="bodytext">
             The first player to ring the bell when the revealed cards show
-            exactly 5 fruits of the same sort wins all of the discard piles.
+            exactly 5 fruits of the same sort wins all of the cards in the
+            center piles.
           </li>
-          <li>
-            The person who won then puts these face-up cards face down under
-            their draw deck and starts a new round by turning over the first
-            card.
+          <li class="bodytext">
+            The person who won then puts these cards face down under their draw
+            deck and starts a new round by turning over the first card.
           </li>
-          <li>
+          <li class="bodytext">
             When a player runs out of cards, the player is not out of the game
             yet. The player still takes part in the game until the player has
             also lost their discard pile. Until then, the player skip revealing
             cards, but they can still ring the bell.
           </li>
-          <li>
+          <li class="bodytext">
             If a player rings the bell by mistake, and the revealed cards do not
             show exactly 5 fruits of the same type, they must give each of the
             other players one card from their draw pile as a penalty.
           </li>
-          <li>
+          <li class="bodytext">
             The game is over when only 2 players are left in the round. They
             continue to play until one of them wins the face-up discard piles.
             There is a special ruling for this situation: if a player rings the
@@ -176,12 +181,17 @@
             face-up discard piles and the game is over. However if the players
             wish, they may continue until one of them wins all of the cards.
           </li>
-          <li>
+          <li class="bodytext">
             The player holding the largest number of cards at the end of the
-            round is the winner.
+            round is the winner!
           </li>
         </ol>
       </section>
+    </div>
+    <div class="conclusion">
+      <h1 class="heading">
+        Feeling confident with the rules? Try out the quiz and the demo game!
+      </h1>
     </div>
     <footer class="footer">
       <p>Media Computation Group 1.4</p>
