--- a/quiz/quiz2.0.html
+++ b/quiz/quiz2.0.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" type="image/x-icon" href="../img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png" />
     <script src="quiz2.0.js"></script>
   </head>
   <body>
@@ -36,7 +36,7 @@
       <span>
         Halli Galli: Quiz - Halli Galli: Quiz. Halli Galli: Quiz. Halli Galli:
         Quiz. Halli Galli: Quiz. Halli Galli: Quiz. Halli Galli: Quiz. Halli
-        Galli: Quiz. 
+        Galli: Quiz.
       </span>
     </div>
 
@@ -53,6 +53,8 @@
         </ol>
         <input
           class="number"
+          min="1"
+          max="5"
           type="number"
           id="answer0"
           placeholder="Type number only"
